crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_class.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            class {\n                msg: string\n                id = 5\n                fn foo(self) {}\n                async fn fetch(self, url: string) {}\n                gen fn [Symbol.iterator](self) {}\n            }\n        \"#)"
---
Expr {
    kind: Class(
        Class {
            span: 13..220,
            type_params: None,
            super_class: None,
            super_type_args: None,
            body: [
                Field(
                    Field {
                        span: 37..67,
                        name: Ident {
                            name: "msg",
                            span: 37..40,
                        },
                        is_public: false,
                        is_static: false,
                        type_ann: Some(
                            TypeAnn {
                                kind: String,
                                span: 42..48,
                                inferred_type: None,
                            },
                        ),
                        init: None,
                    },
                ),
                Field(
                    Field {
                        span: 65..90,
                        name: Ident {
                            name: "id",
                            span: 65..67,
                        },
                        is_public: false,
                        is_static: false,
                        type_ann: None,
                        init: Some(
                            Expr {
                                kind: Num(
                                    Num {
                                        value: "5",
                                    },
                                ),
                                span: 70..71,
                                inferred_type: None,
                            },
                        ),
                    },
                ),
                Method(
                    Method {
                        span: 88..103,
                        name: Ident(
                            Ident {
                                name: "foo",
                                span: 91..94,
                            },
                        ),
                        is_public: false,
                        is_mutating: false,
                        is_static: false,
                        function: Function {
                            type_params: None,
                            params: [],
                            body: Block(
                                Block {
                                    span: 101..103,
                                    stmts: [],
                                },
                            ),
                            type_ann: None,
                            throws: None,
                            is_async: false,
                            is_gen: false,
                        },
                    },
                ),
                Method(
                    Method {
                        span: 120..156,
                        name: Ident(
                            Ident {
                                name: "fetch",
                                span: 129..134,
                            },
                        ),
                        is_public: false,
                        is_mutating: false,
                        is_static: false,
                        function: Function {
                            type_params: None,
                            params: [
                                FuncParam {
                                    pattern: Pattern {
                                        kind: Ident(
                                            BindingIdent {
                                                name: "url",
                                                span: 141..144,
                                                mutable: false,
                                            },
                                        ),
                                        span: 141..144,
                                        inferred_type: None,
                                    },
                                    type_ann: Some(
                                        TypeAnn {
                                            kind: String,
                                            span: 146..152,
                                            inferred_type: None,
                                        },
                                    ),
                                    optional: false,
                                },
                            ],
                            body: Block(
                                Block {
                                    span: 154..156,
                                    stmts: [],
                                },
                            ),
                            type_ann: None,
                            throws: None,
                            is_async: true,
                            is_gen: false,
                        },
                    },
                ),
                Method(
                    Method {
                        span: 173..206,
                        name: Computed(
                            Expr {
                                kind: Member(
                                    Member {
                                        object: Expr {
                                            kind: Ident(
                                                Ident {
                                                    name: "Symbol",
                                                    span: 181..187,
                                                },
                                            ),
                                            span: 181..187,
                                            inferred_type: None,
                                        },
                                        property: Ident(
                                            Ident {
                                                name: "iterator",
                                                span: 188..196,
                                            },
                                        ),
                                        opt_chain: false,
                                    },
                                ),
                                span: 181..196,
                                inferred_type: None,
                            },
                        ),
                        is_public: false,
                        is_mutating: false,
                        is_static: false,
                        function: Function {
                            type_params: None,
                            params: [],
                            body: Block(
                                Block {
                                    span: 204..206,
                                    stmts: [],
                                },
                            ),
                            type_ann: None,
                            throws: None,
                            is_async: false,
                            is_gen: true,
                        },
                    },
                ),
            ],
        },
    ),
    span: 13..220,
    inferred_type: None,
}
