crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_class_with_extends_and_type_params.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            class<T> extends Foo {\n                fn bar<A>(self, a: A): T {}\n            }\n        \"#)"
---
Expr {
    kind: Class(
        Class {
            span: 13..93,
            type_params: Some(
                [
                    TypeParam {
                        span: 20..21,
                        name: "T",
                        bound: None,
                        default: None,
                    },
                ],
            ),
            super_class: Some(
                Ident {
                    name: "Foo",
                    span: 30..33,
                },
            ),
            super_type_args: None,
            body: [
                Method(
                    Method {
                        span: 52..79,
                        name: Ident(
                            Ident {
                                name: "bar",
                                span: 55..58,
                            },
                        ),
                        type_params: Some(
                            [
                                TypeParam {
                                    span: 60..61,
                                    name: "A",
                                    bound: None,
                                    default: None,
                                },
                            ],
                        ),
                        params: [
                            FuncParam {
                                pattern: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "self",
                                            span: 62..66,
                                            mutable: false,
                                        },
                                    ),
                                    span: 62..66,
                                    inferred_type: None,
                                },
                                type_ann: None,
                                optional: false,
                            },
                            FuncParam {
                                pattern: Pattern {
                                    kind: Ident(
                                        BindingIdent {
                                            name: "a",
                                            span: 68..69,
                                            mutable: false,
                                        },
                                    ),
                                    span: 68..69,
                                    inferred_type: None,
                                },
                                type_ann: Some(
                                    TypeAnn {
                                        kind: TypeRef(
                                            "A",
                                            None,
                                        ),
                                        span: 71..72,
                                        inferred_type: None,
                                    },
                                ),
                                optional: false,
                            },
                        ],
                        body: Block {
                            span: 76..79,
                            stmts: [],
                        },
                        type_ann: Some(
                            TypeAnn {
                                kind: TypeRef(
                                    "T",
                                    None,
                                ),
                                span: 75..76,
                                inferred_type: None,
                            },
                        ),
                        is_async: false,
                        is_gen: false,
                    },
                ),
            ],
        },
    ),
    span: 13..93,
    inferred_type: None,
}
