crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_class_with_generic_method.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(r#\"\n            class {\n                fn foo<T>(self, x: T) -> T {\n                    return x\n                }\n            }\n        \"#)"
---
Expr {
    kind: Class(
        Class {
            span: 13..126,
            type_params: None,
            super_class: None,
            super_type_args: None,
            body: [
                Method(
                    Method {
                        span: 37..112,
                        name: Ident(
                            Ident {
                                name: "foo",
                                span: 40..43,
                            },
                        ),
                        is_public: false,
                        is_mutating: false,
                        is_static: false,
                        function: Function {
                            type_params: Some(
                                [
                                    TypeParam {
                                        span: 45..46,
                                        name: "T",
                                        bound: None,
                                        default: None,
                                    },
                                ],
                            ),
                            params: [
                                FuncParam {
                                    pattern: Pattern {
                                        kind: Ident(
                                            BindingIdent {
                                                name: "x",
                                                span: 53..54,
                                                mutable: false,
                                            },
                                        ),
                                        span: 53..54,
                                        inferred_type: None,
                                    },
                                    type_ann: Some(
                                        TypeAnn {
                                            kind: TypeRef(
                                                "T",
                                                None,
                                            ),
                                            span: 56..57,
                                            inferred_type: None,
                                        },
                                    ),
                                    optional: false,
                                },
                            ],
                            body: Block(
                                Block {
                                    span: 64..112,
                                    stmts: [
                                        Stmt {
                                            kind: Return(
                                                ReturnStmt {
                                                    arg: Some(
                                                        Expr {
                                                            kind: Ident(
                                                                Ident {
                                                                    name: "x",
                                                                    span: 93..94,
                                                                },
                                                            ),
                                                            span: 93..94,
                                                            inferred_type: None,
                                                        },
                                                    ),
                                                },
                                            ),
                                            span: 93..94,
                                            inferred_type: None,
                                        },
                                    ],
                                },
                            ),
                            type_ann: Some(
                                TypeAnn {
                                    kind: TypeRef(
                                        "T",
                                        None,
                                    ),
                                    span: 62..63,
                                    inferred_type: None,
                                },
                            ),
                            throws: None,
                            is_async: false,
                            is_gen: false,
                        },
                    },
                ),
            ],
        },
    ),
    span: 13..126,
    inferred_type: None,
}
