crates/escalier_parser/src/snapshots/escalier_parser__expr_parser__tests__parse_func_with_type_params-3.snap
---
source: crates/escalier_parser/src/expr_parser.rs
expression: "parse(\"fn <A: number, B: number> (a: A, b: B): A => a\")"
---
Expr {
    kind: Function(
        Function {
            type_params: Some(
                [
                    TypeParam {
                        span: 5..14,
                        t: TypeAnn {
                            kind: TypeRef(
                                "A",
                                None,
                            ),
                            span: 4..5,
                        },
                        bound: Some(
                            TypeAnn {
                                kind: Number,
                                span: 7..13,
                            },
                        ),
                        default: None,
                    },
                    TypeParam {
                        span: 16..25,
                        t: TypeAnn {
                            kind: TypeRef(
                                "B",
                                None,
                            ),
                            span: 15..16,
                        },
                        bound: Some(
                            TypeAnn {
                                kind: Number,
                                span: 18..24,
                            },
                        ),
                        default: None,
                    },
                ],
            ),
            params: [
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "a",
                                span: 27..28,
                                mutable: false,
                            },
                        ),
                        span: 27..28,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: TypeRef(
                                "A",
                                None,
                            ),
                            span: 30..31,
                        },
                    ),
                    optional: false,
                },
                FuncParam {
                    pattern: Pattern {
                        kind: Ident(
                            BindingIdent {
                                name: "b",
                                span: 33..34,
                                mutable: false,
                            },
                        ),
                        span: 33..34,
                        inferred_type: None,
                    },
                    type_ann: Some(
                        TypeAnn {
                            kind: TypeRef(
                                "B",
                                None,
                            ),
                            span: 36..37,
                        },
                    ),
                    optional: false,
                },
            ],
            body: Expr(
                Expr {
                    kind: Ident(
                        Ident {
                            name: "a",
                            span: 45..46,
                        },
                    ),
                    span: 45..46,
                    inferred_type: None,
                },
            ),
            type_ann: Some(
                TypeAnn {
                    kind: TypeRef(
                        "A",
                        None,
                    ),
                    span: 40..41,
                },
            ),
            is_async: false,
            is_gen: false,
        },
    ),
    span: 0..46,
    inferred_type: None,
}
